--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+
+    <style>
+      body {
+        margin-top: 60px !important;
+      }
+    </style>
     <!-- bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
@@ -49,7 +55,10 @@
                 <a class="nav-link" href="day2.html">2</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="day3.html">3</a>
+                <a class="nav-link" href="day2_2.html">3</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="day3.html">4</a>
               </li>
             </ul>
             <form></form>
@@ -70,7 +79,10 @@
     <a href="https://twitter.com/tk37e"> @tk37e</a>
     <br />
     シナリオサイト:
-    <a href="https://www.pixiv.net/novel/show.php?id=10475042"
+    <a
+      href="https://www.pixiv.net/novel/show.php?id=10475042"
+      target="_blank"
+      rel="noopener noreferrer"
       >https://www.pixiv.net/novel/show.php?id=10475042</a
     >
 
